Closed Bug 187575 Opened 23 years ago Closed 23 years ago

Context menus should not eat clicks outside themselves

Categories

(Core :: XUL, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: deanis74, Assigned: aaronlev)

Details

Attachments

(1 file)

From bug 66834, context menus should also not eat clicks outside themselves. This is Windows-specific, based on bug 66834 comment 77.
I strongly agree, most un-windows-like :) And inconsistent with Netscape 4.x. Is this bug just for right-click menus or for all menus?
Ian: bug 66834 fixed menus off the menu bar. This bug is just for context menus.
Hey you're right, its fixed for the menu bar. That's great news :)
Should context menus never eat clicks, on any platform? I don't think they should. Please correct me if I'm wrong.
Sorry, I wasn't reading correctly. Windows only.
Jesse, does this patch help with the Phoenix forms autocomplete?
Attachment #110806 - Flags: review?(dean_tessman)
Comment on attachment 110806 [details] [diff] [review] Treat xul:popupset like xul:menu, for purposes of determining click consumption I like simple. r=me
Attachment #110806 - Flags: review?(dean_tessman) → review+
Comment on attachment 110806 [details] [diff] [review] Treat xul:popupset like xul:menu, for purposes of determining click consumption Seeking sr= for tiny patch
Attachment #110806 - Flags: superreview?(alecf)
Comment on attachment 110806 [details] [diff] [review] Treat xul:popupset like xul:menu, for purposes of determining click consumption sr=alecf hope this got lots of testing! :)
Attachment #110806 - Flags: superreview?(alecf) → superreview+
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Yes, this fixed Phoenix form autocomplete (tested Phoenix 01/07 nightly). I think it also fixed Phoenix address bar autocomplete and Mozilla address bar autocomplete (bug 66834).
Right-click menus no longer seem to eat clicks, but the menus from personal toolbar folders (including bookmarks) still do. Build ID 2003011405. Win98.
Context menus in MailNews still eat clicks. Should I raise that as a separate bug?
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: shrir → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: