Bug 187575. Context menus should not eat clicks outside themselves (in Windows). r=dean, sr=alecf