layout/xul/base/src/nsMenuPopupFrame.cpp
@@ -1455,7 +1455,7 @@ NS_IMETHODIMP nsMenuPopupFrame::ConsumeOutsideClicks(PRBool& aConsumeOutsideClic
     parentContent->GetTag(*getter_AddRefs(parentTag));
     if (parentTag == nsXULAtoms::menulist)
       return NS_OK;  // Consume outside clicks for combo boxes on all platforms
-    if (parentTag == nsXULAtoms::menu) {
+    if (parentTag == nsXULAtoms::menu || parentTag == nsXULAtoms::popupset) {
 #ifdef XP_WIN
       // Don't consume outside clicks for menus in Windows
       aConsumeOutsideClicks = PR_FALSE;
